deploy/prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: walletconnect-relay
  namespace: crossbell
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: walletconnect-relay
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xchar
        tier: api
    spec:
      containers:
        - image: $IMAGE_TAG_RELEASE
          imagePullPolicy: Always
          name: walletconnect-relay
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "1000Mi"
              cpu: "50m"
            limits:
              memory: "2000Mi"
              cpu: "500m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 15
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
