deploy/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: walletconnect-relay
  namespace: crossbell
spec:
  type: ClusterIP
  selector:
    app: walletconnect-relay
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
